# iron-eye

./: .gitignore  readme.md
execution/: .env.example  Cargo.toml  README.md  build.rs
execution/config/: brokers.example.yaml
execution/models/: README.md
execution/signals/: latest.example.json
execution/src/: config.rs  main.rs  models.rs
execution/src/brokers/: base.rs  mod.rs  paper.rs
research/: README.md  pyproject.toml  requirements.txt
research/notebooks/: connection_test.ipynb
research/src/discovery/: __init__.py  market_scanner.py
